# aragora

./: .codex_session_meta.json  .gitignore  .gitleaks.toml  .mypy-baseline  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Idea-to-Execution-Pipeline-Research.md  Makefile  README.md  ROADMAP.md  docker-compose.production.yml  pyproject.toml  sitecustomize.py
.claude/: settings.json
.github/: actionlint.yaml
.github/workflows/: aragora-gauntlet.yml  aragora-merge-quorum.yml  aragora-review-gate.yml  aragora-review.yml  auto-pr-publisher.yml  autopilot-worktree-e2e.yml  benchmark-truth-publication.yml  benchmark-truth.yml  build.yml  capability-gap.yml  connector-registry.yml  contract-drift-governance.yml  core-suites.yml  coverage.yml  dependabot-uv-lock.yml  deploy-lightsail.yml  deploy-secure.yml  docker.yml  docs-build.yml  docs-consistency.yml  e2e.yml  integration.yml  lint.yml  live-deploy-mode-gate.yml  load-tests.yml  mac-runner-health-poll.yml  metrics-drift.yml  migration-tests.yml  module-tier-drift.yml  mypy-baseline-ratchet.yml  nightly-full-matrix.yml  nightly-integration.yml  openapi.yml  pr-admission-controller.yml  pr-debate.yml  production-monitor.yml  quality-smoke.yml  release-notes.yml  release-readiness.yml  release.yml  (+15 more)
.work_queue/: queue.yaml  queue_sources.yaml
aragora/: __init__.py  __version__.py  capabilities.yaml  core_types.py  deletion_coordinator.py  docs_only.py  exceptions.py  golden.py  module_tiers.yaml  task_brief.py
aragora-debate/docs/: INTEGRATION.md
aragora-debate/tests/: test_receipt.py
aragora-operator/: go.mod  go.sum  main.go
aragora/advocates/: __init__.py  user_interest.py
aragora/agents/: README.md  __init__.py  airlock.py  cli_agents.py  config_loader.py  credential_validator.py  cv.py  errors.py  fallback.py  model_selector.py  registry.py  spec.py  specialist_factory.py  streaming.py  telemetry.py
aragora/analysis/: email_triage.py  nl_query.py
aragora/analytics/: debate_analytics.py
aragora/audit/: bug_detector.py
aragora/auth/: mfa_drift_monitor.py  mfa_enforcement.py  (+1 more)
deploy/: Dockerfile  Dockerfile.backend
docs/: AGENT_FLYWHEEL_ARAGORA_NATIVE.md  AGENT_OPERATING_CONTRACT.md  API_ENDPOINTS.md  ARAGORA_BUSINESS_SUMMARY.md  CANONICAL_GOALS.md  CAPABILITY_MATRIX.md  CI_LANES.md  CLI_REFERENCE.md  COLD_REVIEWER_GUIDE.md  COMMERCIAL_OVERVIEW.md  COORDINATION.md  DEPLOYMENT.md  EXTENDED_README.md  FEATURE_DISCOVERY.md  FEATURE_GAP_LIST.md  GA_CHECKLIST.md  GITHUB_ACTION_SETUP.md  HONEST_ASSESSMENT.md  INDEX.md  LANDING_PAGE.md  METRICS.md  OMNIVOROUS_ROADMAP.md  OPERATIONS.md  PACKAGING.md  PRICING.md  PRICING_PAGE.md  QUICKSTART_CLI.md  QUICKSTART_DEVELOPER.md  README.md  REVIEW_AUTHORITY_PRINCIPLES.md  ROADMAP_30_60_90.md  ROADMAP_EVOLUTION.md  SDK_GUIDE.md  SELF_HOSTING.md  START_HERE.md  STATUS.md  STRATEGIC_ANALYSIS.md  STRATEGY_INDEX.md  THESIS.md  TRUST_PORTABILITY.md  (+2 more)
docs-site/: docusaurus.config.js  package-lock.json  package.json
scripts/: _dogfood_evolution_round_debate.py  _dogfood_evolution_round_gauntlet.py  aft_build_mlx_dataset.py  aft_extract_training_data.py  aft_family_bench.py  aft_family_bench_scoring.py  aft_harness.py  aft_manifest.py  aft_repeated_eval.py  aft_seeded_train_eval.py  aft_to_mlx_chat.py  agent_bridge.py  agent_bridge_broker.py  agent_bridge_live_smoke.py  agent_bridge_sessions.py  agent_bridge_supervise.py  agent_heartbeat.py  agent_overlap_report.py  agt_05_reputation_flow_smoke.py  agt_pipeline_dry_run.py  analyze_boss_metrics.py  analyze_crash_patterns.py  analyze_test_results.py  apply_operator_decisions.py  audit_branch_backlog_parallel.py  audit_codex_branch_backlog.py  audit_env_mutation.py  audit_handler_registry.py  auto_approve_safe_prs.py  auto_approver_activate.sh  auto_merge_bucket_a.py  automation_pr_preflight.sh  benchmark_triage_profiles.py  boss_loop_unstick_plan.py  boss_metrics_health.py  build_benchmark_truth_artifact.py  build_next_prompt.py  cache_codex_automation_github_status.py  check_agent_registry_sync.py  check_aragora_review_gate_policy.py  (+191 more)
sdk/python/: pyproject.toml
sdk/python/aragora/: generated_types.py
sdk/python/aragora_sdk/: client.py
sdk/python/aragora_sdk/namespaces/: __init__.py  accounting.py  admin.py  agent_bridge.py  analytics.py  bots.py  chat.py  costs.py  dashboard.py  debates.py  evolution.py  feedback.py  marketplace.py  mcp.py  monitoring.py  notifications.py  openapi.py  pipeline.py  playground.py  privacy.py  prompt_engine.py  receipts.py  review_queue.py  rlm.py  security.py  self_improve.py  services.py  settlements.py  spectate.py  status.py  system.py  tasks.py
sdk/python/tests/: conftest.py  test_admin.py  test_agent_bridge.py  test_analytics.py  test_bots.py  test_chat.py  test_costs.py  test_cross_sdk_parity_routes.py  test_dashboard.py  test_debates.py  test_evolution.py  test_feedback.py  test_mcp_settlements.py  test_monitoring.py  test_openapi.py  test_pipeline.py  test_prompt_engine.py  test_receipts.py  test_security.py  test_self_improve.py  test_services.py  test_settlements.py  test_status.py  test_system.py  test_tasks.py
tests/: README.md  SKIP_AUDIT.md  conftest.py  test_agent_anthropic.py  test_agent_api_common.py  test_agent_openrouter.py  test_agents_unit.py  test_airlock.py  test_api_agents_anthropic.py  test_audit_domain_packs.py  test_auth_sso.py  test_billing_usage.py  test_bots.py  test_browser_extension_context_menu.py  test_cli_agents.py  test_cli_badge.py  test_cli_demo.py  test_cli_doctor.py  test_cli_main.py  test_client_sdk.py  test_debate_complexity_governor.py  test_debate_controller.py  test_debate_factory.py  test_debate_origin.py  test_debate_prompt_builder.py  test_debate_queue.py  test_debate_stream_server.py  test_debates_fork.py  test_docs_only.py  test_elo.py  test_embeddings.py  test_expense_tracker.py  test_fallback_chain.py  test_feedback_phase_scoring.py  test_gauntlet_storage.py  test_golden_api.py  test_handlers_debates.py  test_handlers_debates_batch.py  test_handlers_graph_debates.py  test_handlers_privacy.py  (+31 more)
(+4222 files in other folders)
