[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora-debate"
version = "2.8.0"
description = "Standalone adversarial debate package for offline and mock-agent deliberation"
readme = {text = "# Aragora Debate\n\nA standalone Python package for running bounded multi-agent debates with mock or real agents. The published default surface is intentionally small: `Environment`, `DebateProtocol`, and `Arena`.", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Agora Contributors"}]
keywords = ["ai", "multi-agent", "debate", "deliberation", "consensus", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "build>=1.2,<2.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "twine>=6.2.0,<7.0",
]
gateway = [
    "fastapi>=0.135.3,<1.0",
    "uvicorn>=0.30,<1.0",
]
blockchain = [
    "web3>=6.0,<8.0",
]
enterprise = [
    "asyncpg>=0.31.0,<1.0",
    "python3-saml>=1.15,<2.0",
    "supabase>=2.0,<3.0",
]
connectors = [
    "aiokafka>=0.10,<1.0",
    "aio-pika>=9.6.2,<10.0",
]
experimental = [
    "playwright>=1.40,<2.0",
]
dev = [
    "mypy>=1.19.0,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "types-croniter>=2.0,<6.0",
]
all = [
    "fastapi>=0.135.3,<1.0",
    "uvicorn>=0.30,<1.0",
    "web3>=6.0,<8.0",
    "asyncpg>=0.31.0,<1.0",
    "python3-saml>=1.15,<2.0",
    "supabase>=2.0,<3.0",
    "aiokafka>=0.10,<1.0",
    "aio-pika>=9.6.2,<10.0",
    "playwright>=1.40,<2.0",
]

[project.urls]
Homepage = "https://aragora.ai"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora", "aragora.core", "aragora.debate"]

[tool.setuptools.package-data]
"aragora" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-p no:rerunfailures"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
exclude = ["aragora-debate*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "F", "W", "T201", "BLE001", "UP006", "UP007", "G004", "C4", "SIM910", "S101"]
ignore = ["E402", "E501", "E731", "E741", "E712", "C401", "C405", "C408", "C416"]

[tool.ruff.lint.per-file-ignores]
"aragora/cli/*" = ["T201", "BLE001"]
"aragora/ideacloud/cli/*" = ["T201"]
"aragora/migrations/*" = ["T201", "BLE001"]
"aragora/db/migrate.py" = ["T201", "BLE001"]
"aragora/persistence/migrations/*" = ["T201", "BLE001"]
"aragora/training/exporters/*" = ["T201", "BLE001"]
"aragora/training/tinker_client.py" = ["T201", "BLE001"]
"aragora/debate/breakpoints.py" = ["T201", "BLE001"]
"aragora/nomic/gates.py" = ["T201", "BLE001"]
"aragora/nomic/approval.py" = ["T201", "BLE001"]
"aragora/nomic/scope_guard.py" = ["T201", "BLE001"]
"aragora/server/__main__.py" = ["T201", "BLE001"]
"aragora/server/startup/health_check.py" = ["T201", "BLE001"]
"scripts/*" = ["T201", "F401", "F841", "BLE001", "G004", "S101"]
"tests/*" = ["T201", "F401", "F821", "F841", "BLE001", "G004", "S101"]
"aragora/**/test_*.py" = ["S101"]
"aragora/**/tests/*" = ["S101"]
"examples/*" = ["T201", "BLE001"]
"sdk/cookbook/*" = ["T201", "BLE001", "F841"]
"deprecated/*" = ["UP"]
"aragora/*" = ["BLE001", "G004", "C4", "SIM910"]
"aragora/analysis/codebase/bug_detector.py" = ["BLE001", "G004"]
"aragora/agents/code_reviewer.py" = ["BLE001", "G004"]
"aragora/broadcast/mixer.py" = ["BLE001", "G004"]
"aragora/connectors/ecommerce/*.py" = ["BLE001", "G004"]
"aragora/debate/phases/*.py" = ["BLE001", "G004"]
"aragora/debate/prompt_builder.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/adapters/*.py" = ["BLE001", "G004"]
"aragora/rlm/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/control_plane/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/features/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/integrations/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/integration_management.py" = ["BLE001", "G004"]
"aragora/server/handlers/knowledge_base/mound/*.py" = ["BLE001", "G004"]
"aragora/server/handlers/external_agents.py" = ["BLE001", "G004"]
"aragora/server/handlers/receipts.py" = ["BLE001", "G004"]
"aragora/server/handlers/sme_success_dashboard.py" = ["BLE001", "G004"]
"aragora/server/persistent_origin_store.py" = ["BLE001", "G004"]
"aragora/server/state.py" = ["BLE001", "G004"]
"aragora/server/openapi_impl.py" = ["BLE001", "G004"]
"aragora/storage/*.py" = ["BLE001", "G004"]
"aragora/connectors/blockchain/connector.py" = ["BLE001", "G004"]
"aragora/connectors/enterprise/database/*.py" = ["BLE001", "G004"]
"aragora/connectors/supermemory/*.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/api/*.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/core.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/checkpoint.py" = ["BLE001", "G004"]
"aragora/knowledge/mound/ops/*.py" = ["BLE001", "G004"]
"aragora/knowledge/pipeline.py" = ["BLE001", "G004"]

# -----------------------------------------------------------------------------
# mypy configuration — Tier A (config-only) remediation.
#
# Restores parity between the pre-push mypy hook and CI's changed-file gate.
# Both layers intend "report errors for the file under check; do not leak
# transitive errors from the whole import closure". CI already uses
# `--follow-imports=skip`; this section encodes the equivalent intent at the
# config level so the pre-push hook stops flagging ~1,400 transitive errors
# that CI never had to look at. Sources are unchanged; Tier B (real type-bug
# fixes) is scoped to separate PRs per the triage at
# .aragora_coordination/mypy_triage_2026-04-17.md.
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Match CI intent: type-check the target file(s), silence transitive noise.
follow_imports = "silent"
# Avoid turning untyped function bodies into noise-only notes.
check_untyped_defs = false
# Keep narrowing and Optional handling strict (mypy's default, made explicit).
strict_optional = true
disable_error_code = [
    "annotation-unchecked",  # pure informational notes, not failures
    "truthy-function",       # ~45 legacy optional-import idioms
    "import-untyped",        # defense in depth; stubs installed via [dev] extras
]

# Optional-import fallback modules. These deliberately rebind a symbol to
# ``None`` when the optional dependency is unavailable, e.g.
#   try:  from x import Y
#   except ImportError:  Y = None  # type: ignore[assignment]
# mypy >= 1.16 flags this pattern as [misc] "Cannot assign to a type". The
# pattern is intentional and reviewed; silence [misc] for these modules only.
[[tool.mypy.overrides]]
module = [
    "aragora.cli.commands.swarm",
    "aragora.cli.commands.worktree",
    "aragora.connectors.chat.*",
]
disable_error_code = ["misc"]
