[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aragora-sdk"
version = "2.9.0"
description = "Python SDK for the Aragora multi-agent debate platform"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Aragora Team", email = "sdk@aragora.ai" }
]
keywords = [
    "aragora",
    "ai",
    "multi-agent",
    "debate",
    "llm",
    "decision-making",
    "consensus",
    "sdk",
    "api-client",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/an0mium/aragora"
Documentation = "https://github.com/an0mium/aragora/blob/main/docs/guides/python-quickstart.md"
Repository = "https://github.com/an0mium/aragora/tree/main/sdk/python"
Changelog = "https://github.com/an0mium/aragora/blob/main/sdk/python/CHANGELOG.md"
"Getting Started" = "https://github.com/an0mium/aragora/blob/main/docs/START_HERE.md"

[tool.hatch.build.targets.wheel]
packages = ["aragora_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["aragora_sdk"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aragora_sdk.generated_types",
    "aragora_sdk.namespaces.openapi",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
]

[tool.coverage.run]
source = ["aragora_sdk"]
branch = true
omit = [
    "aragora_sdk/generated_types.py",
    "aragora_sdk/namespaces/openapi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
